[gd_scene load_steps=23 format=3 uid="uid://dr50hke8rij2u"]

[ext_resource type="StyleBox" uid="uid://cma7qotq8yxmp" path="res://assets/styleboxflat/items_stylebox.tres" id="1_q2lc3"]
[ext_resource type="Script" path="res://scenes/settings.gd" id="1_vpb32"]
[ext_resource type="FontFile" uid="uid://bicbw3ivie58m" path="res://assets/ZenDots-Regular.ttf" id="2_t0517"]
[ext_resource type="Texture2D" uid="uid://brijfo17hro5m" path="res://assets/backgrounds/citystreet.png" id="3_rfrbt"]
[ext_resource type="StyleBox" uid="uid://bkqi28gr4d8ur" path="res://scenes/yellowbutton.tres" id="4_cqh4o"]
[ext_resource type="FontFile" uid="uid://ydi4j86nisvg" path="res://assets/Dressup/ZenDots-Regular.ttf" id="4_j27mc"]
[ext_resource type="Texture2D" uid="uid://d07svgaqtpn04" path="res://assets/backgrounds/street.png" id="4_qnuri"]
[ext_resource type="StyleBox" uid="uid://c4nuutv2da56a" path="res://scenes/purpbutton.tres" id="5_1nrd2"]
[ext_resource type="Texture2D" uid="uid://dlxtwdwdydpya" path="res://assets/backgrounds/spacebg.jpg" id="5_babpk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewy4k"]
bg_color = Color(0.631678, 0.151006, 0.231554, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qyanb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wn0bd"]
bg_color = Color(0.533333, 0.615686, 0.258824, 1)
border_color = Color(0.448712, 0.448712, 0.448712, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cos85"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5ejj"]
bg_color = Color(0.286479, 0.138691, 0.225544, 1)
border_color = Color(0.37981, 0.379811, 0.37981, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u0u4o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tc7nf"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r31ea"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ej4ex"]
bg_color = Color(0.321569, 0.321569, 0.321569, 0.501961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nx224"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8kfte"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o38ij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yh0jk"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpb32")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.619608)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="ColorRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 300)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_q2lc3")

[node name="Settings" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 122.0
offset_top = 38.0
offset_right = 281.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.286275, 0.137255, 0.227451, 1)
theme_override_fonts/font = ExtResource("2_t0517")
theme_override_font_sizes/font_size = 30
text = "Settings
"

[node name="background color" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 102.0
offset_right = 342.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0.286275, 0.137255, 0.227451, 1)
theme_override_fonts/font = ExtResource("2_t0517")
theme_override_font_sizes/font_size = 20
text = "Dress Up Background"

[node name="Music" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 106.0
offset_top = 214.0
offset_right = 219.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0.286275, 0.137255, 0.227451, 1)
theme_override_fonts/font = ExtResource("2_t0517")
theme_override_font_sizes/font_size = 20
text = "Music On
"

[node name="Exit" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 330.0
offset_top = 14.0
offset_right = 362.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_j27mc")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_ewy4k")
text = "X"

[node name="yellow" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 74.0
offset_top = 142.0
offset_right = 106.0
offset_bottom = 174.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_qyanb")
theme_override_styles/hover = SubResource("StyleBoxFlat_wn0bd")
theme_override_styles/normal = ExtResource("4_cqh4o")

[node name="purple" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 130.0
offset_top = 142.0
offset_right = 162.0
offset_bottom = 174.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_cos85")
theme_override_styles/hover = SubResource("StyleBoxFlat_w5ejj")
theme_override_styles/normal = ExtResource("5_1nrd2")

[node name="street" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 186.0
offset_top = 142.0
offset_right = 218.0
offset_bottom = 174.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_u0u4o")
theme_override_styles/normal = SubResource("StyleBoxFlat_tc7nf")

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect/HBoxContainer/VBoxContainer/Panel/street"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("3_rfrbt")

[node name="street2" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 242.0
offset_top = 142.0
offset_right = 274.0
offset_bottom = 174.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_r31ea")
theme_override_styles/hover = SubResource("StyleBoxFlat_ej4ex")
theme_override_styles/normal = SubResource("StyleBoxFlat_tc7nf")

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect/HBoxContainer/VBoxContainer/Panel/street2"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("4_qnuri")

[node name="space" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 0
offset_left = 298.0
offset_top = 142.0
offset_right = 330.0
offset_bottom = 174.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_nx224")
theme_override_styles/normal = SubResource("StyleBoxFlat_tc7nf")

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect/HBoxContainer/VBoxContainer/Panel/space"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("5_babpk")

[node name="CheckButton" type="CheckButton" parent="ColorRect/HBoxContainer/VBoxContainer/Panel"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 234.0
offset_top = 206.0
offset_right = 278.0
offset_bottom = 246.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_8kfte")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_o38ij")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yh0jk")
button_pressed = true
keep_pressed_outside = true

[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/Panel/Exit" to="." method="_on_x_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/Panel/yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/Panel/purple" to="." method="_on_purple_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/Panel/street" to="." method="_on_street_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/Panel/street2" to="." method="_on_street_2_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/Panel/space" to="." method="_on_space_pressed"]
[connection signal="toggled" from="ColorRect/HBoxContainer/VBoxContainer/Panel/CheckButton" to="." method="_on_check_button_toggled"]
